--- a/detail-book.html
+++ b/detail-book.html
@@ -43,7 +43,7 @@
                     <a class="nav-link" href="search-book.html" style="color: #E7E7E8;">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#searchBook">Search Book</a>
+                    <a class="nav-link" href="search-book.html#searchBook">Search Book</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="about-us.html">About Us</a>
@@ -64,7 +64,7 @@
               <a class="nav-link" href="search-book.html" style="color: #E7E7E8;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#searchBook">Search Book</a>
+              <a class="nav-link" href="search-book.html#searchBook">Search Book</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about-us.html">About Us</a>
@@ -77,8 +77,7 @@
         </div>
       </nav>
 
-      <div class="container container-detail-book d-flex justify-content-center" id="searchBook" style="background-color: white
-      ;">
+      <div class="container container-detail-book d-flex justify-content-center" id="searchBook" style="padding: 50px 0 200px 0;">
         <h1 class="text-white">Dasar Desain Grafis</h1>
       </div>
     </div>
@@ -86,16 +85,15 @@
   <!-- END : HEADER -->
 
 
-
   <!-- START : LIST BOOK -->
   <section class="data-book">
-    <div class="container pb-4 px-4">
+    <div class="container shadow-sm pb-4 p-5 rounded-24" style="background-color: white; margin-top: -100px; margin-bottom: 100px;">
       <div class="row justify-content-around">
-          <div class="col-12 col-md-6">
-            <img src="images/data-buku/dasardesaingrafis.jpg"  alt="">
+          <div class="col-12 col-md-6 d-flex justify-content-center">
+            <img src="images/data-buku/dasardesaingrafis.jpg" class="img-fluid" style="max-width: 360px; max-height: 360px;">
           </div>
-          <div class="col-12 col-md-6">
-            <table class="table">
+          <div class="col-12 col-md-6 mt-5 mt-md-0">
+            <table class="table table-striped">
               <tbody>
                 <tr>
                   <th scope="row">Judul Buku </th>
@@ -134,11 +132,37 @@
                 </tr>
               </tbody>
             </table>
+            <p class="text-justify caption-text mt-4" style="text-indent: 30px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure iusto aut quo repudiandae sapiente est quae perferendis, officia cumque laborum illo? Aspernatur repellat illum iste, dolores odio quasi id eveniet, similique omnis dolore provident natus maxime quisquam accusantium repudiandae! Harum veniam reiciendis, laboriosam porro labore animi? Magni facere, unde veritatis ipsum blanditiis nihil ad rem error architecto rerum a quas et dolor consequuntur non hic. Tenetur cumque quas ullam doloremque nulla velit autem, fuga saepe quod, perferendis molestias alias facere consectetur corporis adipisci ipsa labore ut eius, aut odit animi repellendus architecto. Asperiores ad placeat exercitationem iusto dicta rerum accusamus consequatur totam cumque? Qui optio atque totam, aliquam distinctio tenetur esse odio expedita maiores vel recusandae aliquid iusto ab dolorem quisquam cum ratione corporis quod assumenda? Ratione et magnam placeat, saepe fugiat velit praesentium voluptates eius veritatis culpa, distinctio facilis minus ullam accusamus ut porro ipsum, quos necessitatibus! Tenetur, delectus.</p>
+          </div>
+          <div class="col-12 d-flex justify-content-center">
+            <!-- Button trigger modal -->
+            <button type="button" class="btn btn-fill text-white px-5 my-5" type="submit" style="width: 50%;" data-bs-toggle="modal" data-bs-target="#exampleModal">
+              Borrow
+            </button>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Confirmation</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    Are you sure to borrow this book?
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary">Sure!</button>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
       </div>
   </div>
 
   </section>
+
 
 
   <!-- START : FOOTER -->
