--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
               <div class="modal-body" style="padding:	2rem; padding-top: 0; padding-bottom: 0;">
                 <ul class="navbar-nav responsive me-auto mt-2 mt-lg-0">
                   <li class="nav-item active">
-                    <a class="nav-link" href="#" style="color: #E7E7E8;">Home</a>
+                    <a class="nav-link" href="index.html" style="color: #E7E7E8;">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Get Started</a>
+                    <a class="nav-link" href="#cta">Get Started</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="about-us.html">About Us</a>
                   </li>
                 </ul>
               </div>
@@ -61,13 +61,13 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo">
           <ul class="navbar-nav me-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="#" style="color: #E7E7E8;">Home</a>
+              <a class="nav-link" href="index.html" style="color: #E7E7E8;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Get Started</a>
+              <a class="nav-link" href="#cta">Get Started</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="about-us.html">About Us</a>
             </li>
           </ul>
           <div class="gap-3">
@@ -85,8 +85,8 @@
             <!-- <p class="text-caption">FREE 30 DAY TRIAL</p> -->
             <h1 class="title-text-big text-md-left">the quickest and best way to manage your library data</h1>
             <div class="d-flex flex-sm-row flex-column align-items-center mx-lg-0 mx-auto justify-content-center gap-3">
-              <a href="index-home.html" class="btn d-inline-flex mb-md-0 btn-try text-white border-0">Try it free</a>
-              <button class="btn btn-outline">
+              <a href="search-book.html" class="btn d-inline-flex mb-md-0 btn-try text-white border-0">Try it free</a>
+              <a href="youtube.com" class="btn btn-outline">
                 <div class="d-flex align-items-center">
                   <svg class="me-2" width="13" height="12" viewBox="0 0 13 13" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
@@ -96,14 +96,13 @@
                   </svg>
                   Watch Demo Video
                 </div>
-              </button>
+              </a>
             </div>
           </div>
           <!-- Right Column -->
           <div class="right-column text-center d-flex justify-content-lg-center justify-content-center pe-0 align-items-center">
             <img id="img-fluid" class="h-auto mw-100"
-              src="images/books.svg" alt=""  >
-              <!-- http://api.elements.buildwithangga.com/storage/files/2/assets/Header/Header4/Header-4-3.png -->
+              src="images/books.svg">
           </div>
 
         </div>
@@ -119,19 +118,19 @@
       <div class="container">
           <div class="row brand">
               <div class="col-md-3 col-6 text-center my-md-auto">
-                  <img src="https://api.elements.buildwithangga.com/storage/files/2/assets/Content/Content10/Slack-Logo.png"
+                  <img src="images/partners/perpus.jpg"
                       alt="" class="img-fluid">
               </div>
               <div class="col-md-3 col-6 text-center my-md-auto">
-                  <img src="https://api.elements.buildwithangga.com/storage/files/2/assets/Content/Content10/Microsoft-Logo.png"
+                  <img src="images/partners/itcs.jpg"
+                      alt="" class="img-fluid" > 
+              </div>
+              <div class="col-md-3 col-6 text-center my-md-auto mt-5 mt-md-0">
+                  <img src="images/partners/ditlance 1.jpg"
                       alt="" class="img-fluid">
               </div>
               <div class="col-md-3 col-6 text-center my-md-auto mt-5 mt-md-0">
-                  <img src="https://api.elements.buildwithangga.com/storage/files/2/assets/Content/Content10/Google-Logo.png"
-                      alt="" class="img-fluid">
-              </div>
-              <div class="col-md-3 col-6 text-center my-md-auto mt-5 mt-md-0">
-                  <img src="https://api.elements.buildwithangga.com/storage/files/2/assets/Content/Content10/Airbnb-Logo.png"
+                  <img src="images/partners/inotal.jpg "
                       alt="" class="img-fluid">
               </div>
           </div>
@@ -149,7 +148,6 @@
         <div class="d-flex img-hero text-center justify-content-center">
           <img id="hero" class="img-fluid"
           src="images/choose.svg" alt="" style="max-height: 400px;">
-          <!-- http://api.elements.buildwithangga.com/storage/files/2/assets/Header/Header4/Header-4-3.png -->
         </div>
 
         <!-- Right Column -->
@@ -221,7 +219,6 @@
             <div class="right-column text-center d-flex justify-content-lg-end justify-content-center pe-0">
               <img id="img-fluid" class="h-auto mw-100"
                 src="images/whatweddo.svg" alt="">
-                <!-- http://api.elements.buildwithangga.com/storage/files/2/assets/Header/Header4/Header-4-3.png -->
             </div>
           </div>
         </div>
@@ -276,7 +273,7 @@
 
 
   <!-- START : CONTACT US  -->
-  <section class="contact-us">
+  <section class="contact-us" id="cta">
       
       <div class="container">
           <div class="row d-block mx-0">
@@ -285,8 +282,8 @@
               </div>
           </div>
           <div class="d-flex flex-sm-row flex-column align-items-center mx-lg-0 mx-auto justify-content-center gap-3 mt-5">
-            <button class="btn d-inline-flex mb-md-0 btn-try text-white border-0">Try it free</button>
-            <button class="btn btn-outline">
+            <a href="search-book.html" class="btn d-inline-flex mb-md-0 btn-try text-white border-0">Try it free</a>
+            <a href="youtube.com" class="btn btn-outline">
               <div class="d-flex align-items-center">
                 <svg class="me-2" width="13" height="12" viewBox="0 0 13 13" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
@@ -296,7 +293,7 @@
                 </svg>
                 Watch Demo Video
               </div>
-            </button>
+            </a>
           </div>
       </div>
   </section>
